[tool.poetry]
name = "videoai"
version = "0.1.0"
description = "video search and retrieval tool"
authors = ["ajinkyaT <ajinkya.takawale97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
pandas = "^2.2.2"
gradio = "^4.26.0"
faiss-cpu = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
